<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_partidos"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_sports_soccer_24"
        android:title="@string/porra"/>
    <item
        android:id="@+id/page_registro"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_timeline_24"
        android:title="@string/registros"
        />
    <item
        android:id="@+id/page_inicio"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/inicio"
        />
    <item
        android:id="@+id/page_simulador"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/simulador"/>
</menu>