<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="10dp"
    android:padding="20dp"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/banderaImage"
            android:layout_width="208dp"
            android:layout_height="139dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/bandera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/nombreEquipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/portugal"
            android:textSize="20sp"
            />

        <LinearLayout
            android:id="@+id/detalles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/alineacionImg"
                android:layout_width="342dp"
                android:layout_height="195dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/alineacion"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/ranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ranking_de_la_fifa_3"
                android:textSize="16sp"
                android:layout_margin="10dp"/>

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>