<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.apuesta.ApuestaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/equipoLocaltv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/portugal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintEnd_toStartOf="@id/vstv"/>

    <TextView
        android:id="@+id/vstv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/equipoVisitantetv"
        app:layout_constraintStart_toEndOf="@+id/equipoLocaltv"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/equipoVisitantetv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/portugal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintStart_toEndOf="@id/vstv"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <RadioButton
            android:id="@+id/localRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/portugal"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="287dp" />

        <RadioButton
            android:id="@+id/empateRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empate"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="287dp" />

        <RadioButton
            android:id="@+id/visitanteRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/portugal"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="287dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/precioLocalTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_1_5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintEnd_toStartOf="@id/precioEmpateTv"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/precioEmpateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_1_5"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@id/precioLocalTv"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintEnd_toStartOf="@id/precioVisitanteTv"/>

    <TextView
        android:id="@+id/precioVisitanteTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_1_5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/precioEmpateTv"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <EditText
        android:id="@+id/editTextApuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/apuesta"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        app:layout_constraintEnd_toStartOf="@id/apostarButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline5"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <Button
        android:id="@+id/apostarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apostar"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextApuesta"
        app:layout_constraintTop_toBottomOf="@+id/guideline5"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <TextView
        android:id="@+id/dineroTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

</androidx.constraintlayout.widget.ConstraintLayout>